added mood icons, added genre wheel

--- a/style.css
+++ b/style.css
@@ -170,3 +170,35 @@ h2 {
 .moon.tired{
 	transform: rotate(-315deg);
 }
+
+/* ENERGY */
+svg {
+    width: 150%;
+    height:150%;
+    visibility: hidden;
+}
+
+.upText,
+.downText {
+    text-anchor: middle;
+    font-weight: 700;
+    font-size: 14px;
+    fill: #03A9F4;
+    letter-spacing: 0.4px;
+    user-select: none;
+    -webkit-user-select: none;
+    pointer-events: none;
+    text-rendering: optimizeSpeed;
+}
+
+.upText {
+    font-size: 24px;
+}
+
+#dragger{
+    -webkit-tap-highlight-color: rgba(0,0,0,0); 
+}
+
+.downText {
+    letter-spacing: -0.4px;
+}
