--- a/style.css
+++ b/style.css
@@ -77,17 +77,20 @@ h2 {
     padding-top: 50px;
     padding-bottom: 50px;
     text-align: center;
-    width: 2000px;
-    height: 1000px;
-    margin: auto;
+    width: auto;
+    height: 60vh;
 }
 .swiper-slide {
     background-position: center;
     background-size: cover;
     width: 700px;
     height: 700px;
-    background: #fff;
     margin: auto;
+}
+.swiper-slide img {
+    filter: invert(100%);
+    height: 40vh;
+    width: auto;
 }
 
 /* MOOD */
@@ -172,33 +175,3 @@ h2 {
 }
 
 /* ENERGY */
-svg {
-    width: 150%;
-    height:150%;
-    visibility: hidden;
-}
-
-.upText,
-.downText {
-    text-anchor: middle;
-    font-weight: 700;
-    font-size: 14px;
-    fill: #03A9F4;
-    letter-spacing: 0.4px;
-    user-select: none;
-    -webkit-user-select: none;
-    pointer-events: none;
-    text-rendering: optimizeSpeed;
-}
-
-.upText {
-    font-size: 24px;
-}
-
-#dragger{
-    -webkit-tap-highlight-color: rgba(0,0,0,0); 
-}
-
-.downText {
-    letter-spacing: -0.4px;
-}
