--- a/templates/song.html
+++ b/templates/song.html
@@ -7,8 +7,7 @@
         <link href="https://fonts.googleapis.com/css?family=Nunito:200,300,400" rel="stylesheet"> 
         <!-- <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.css"> -->
         <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.css">
-        <link rel="stylesheet" type="text/css" href="./swiper.min.css">
-        <link rel="stylesheet" type="text/css" href="./style.css">
+        <link rel="stylesheet" type="text/css" href="/static/style.css">
        
     </head>
 
